# Mbhewoo-labs

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  metadata.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260701_0000_0001_create_forecasters.py  20260701_0001_0002_create_markets.py  20260701_0002_0003_research_corpus.py
app/: config.py  database.py  main.py
app/graph/: schema.py
app/models/: __init__.py  associations.py  base.py  concept.py  domain.py  forecaster.py  institution.py  market.py  paper.py  researcher.py  trial.py
app/routes/: health.py
app/templates/: base.html
docs/ai-studio-prototype/: README.md
docs/ai-studio-prototype/src/: App.tsx
mbhewoo-labs/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mbhewoo-labs/alembic/: .gitkeep
mbhewoo-labs/app/: __init__.py  config.py  database.py  main.py
mbhewoo-labs/app/graph/: __init__.py
mbhewoo-labs/app/ingestion/: __init__.py
mbhewoo-labs/app/ledger/: __init__.py
mbhewoo-labs/app/markets/: __init__.py
mbhewoo-labs/app/routes/: health.py
mbhewoo-labs/app/static/: .gitkeep
mbhewoo-labs/app/templates/: base.html
mbhewoo-labs/scripts/: .gitkeep
mbhewoo-labs/tests/: __init__.py  test_health.py
scripts/: init_graph.py  seed_domains.py  test_db.py  test_neo4j.py  verify_schema.py
tests/: README.md  conftest.py  test_corpus_models.py  test_forecaster_model.py  test_health.py  test_market_model.py
