[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbhewoo-labs"
version = "0.1.0"
description = "Credibility forecasting platform for African biomedical and biotechnology research"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Mbhewoo Labs Dev Team", email = "info@mbhewoolabs.org" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "neo4j>=5.21.0",
    "Jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "black>=24.4.2",
    "ruff>=0.4.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py313']
